--- a/_themes/tm3/partials/article.html
+++ b/_themes/tm3/partials/article.html
@@ -1,7 +1,7 @@
 <article>
     <h4 class="headline"><a class="link" href="{{ url }}">{{ title }}</a></h4>
 
-    <time class="body-1 dt-start" datetime="{{ datestamp format="{{ _datetime_format }}" }}">{{ datestamp|relative }}</time>
+    <time class="body-1 dt-start" datetime="{{ datestamp format="{{ _datetime_format }}" }}">{{ datestamp format="{{ _date_format }}" }}</time>
     {{ if truncate }}
     {{ content|markdown|truncate:400 }}
     {{ else }}
