--- a/_themes/tm3/partials/performance.html
+++ b/_themes/tm3/partials/performance.html
@@ -1,24 +1,30 @@
 <article class="h-event{{ if datestamp|in_future }} future{{ /if }}{{ if datestamp|is_today }} today{{ /if }}" data-latitude="{{ latitude }}" data-longitude="{{ longitude }}">
 
-    <div class="row pad-half-vertical">
+    <div class="row">
         <div class="event-headlines col-3-4 no-pad">
             <h4 class="title p-name">{{ title }}</h4>
+        </div>
 
-            {{ if location }}
-            <a class="p-name u-url link" href="http://www.google.com/maps/place/{{ location|urlencode }}/@{{ latitude }},{{ longitude }},17z" target="_blank">{{ location }}</a>
+        <div class="float-right">
+            <div class="calendar col-1-4 no-pad">
+                <time class="dt-start" datetime="{{ datestamp format="m-d-Y" }} {{ time }}">
+                    <span class="month">{{ datestamp format="M" }}</span>
+                    <span class="day">{{ datestamp format="j" }}</span>
+                    <span class="year">{{ datestamp format="Y" }}</span>
+                </time>
+            </div>
+
+            {{ if event_time }}
+            <span class="time">{{ event_time format="{{ _time_format }}" }}</span>
             {{ /if }}
         </div>
-
-        <div class="calendar col-1-4 no-pad">
-            <time class="dt-start" datetime="{{ datestamp format="m-d-Y" }} {{ time }}">
-                <span class="month">{{ datestamp format="M" }}</span>
-                <span class="day">{{ datestamp format="j" }}</span>
-                <span class="year">{{ datestamp format="Y" }}</span>
-            </time>
-
-            {{ if event_time }}<span class="time">{{ event_time format="{{ _time_format }}" }}</span>{{ /if }}
-        </div>
     </div>
+
+    {{ if location }}
+    <div class="row p-location">
+        <a class="p-name u-url subhead link" href="http://www.google.com/maps/place/{{ location|urlencode }}/@{{ latitude }},{{ longitude }},17z" target="_blank">{{ location }}</a>
+    </div>
+    {{ /if }}
 
     {{ if content }}
     <div class="body-1 p-summary">
