Updated contact layout

--- a/_themes/tm3/css/contact.css
+++ b/_themes/tm3/css/contact.css
@@ -14,6 +14,8 @@
     z-index: 4;
 }
 
+.tile.right { right: 24px; text-align: right; }
+
 .tile:last-of-type { bottom: 0; }
 
-#content * { color: #FFF; }
+.hero * { color: #FFF; }
