Adjusted widths of table columns

--- a/_themes/tm3/partials/biography-downloads.html
+++ b/_themes/tm3/partials/biography-downloads.html
@@ -1,7 +1,7 @@
 {{ if pdfs }}
 <div class="row">
     {{ pdfs }}
-    <div class="col-1-2 text-center">
+    <div class="col-1-2 pad-half-vertical text-center">
         <a class="button download" href="{{ download file="{pdf}" as="{pdf}" }}">{{ label }}</a>
     </div>
     {{ /pdfs }}
