--- a/_themes/tm3/partials/quote.html
+++ b/_themes/tm3/partials/quote.html
@@ -2,7 +2,7 @@
     <blockquote class="headline">{{ content|widont|smartypants }}</blockquote>
 
     <figcaption>
-        <span class="body-2">{{ title }}</span>
-        <cite class="body-1">{{ source }}</cite>
+        <span class="body-2">{{ title|widont }}</span>
+        <cite class="body-1">{{ source|widont }}</cite>
     </figcaption>
 </figure>
