--- a/_themes/tm3/css/news.css
+++ b/_themes/tm3/css/news.css
@@ -4,7 +4,7 @@ article::after
     content: '';
     display: block;
     height: 1px;
-    margin: 3rem auto;
+    margin: 3rem auto 0 auto;
     width: 6rem;
 }
 
