--- a/_themes/tm3/css/map.css
+++ b/_themes/tm3/css/map.css
@@ -1,6 +1,13 @@
-.js #map { height: auto; }
+.js #map
+{
+    background-color: #FFF;
+    height: auto;
+}
 
-#map-wrapper { position: relative; }
+#map-wrapper
+{
+    position: relative;
+}
 
 #map-wrapper::before
 {
@@ -44,8 +51,6 @@
         margin-bottom: 0;
         padding: 0;
     }
-
-    /*.gm-style-iw .h-event .calendar { right: -10px; }*/
 
     .gm-style-iw .h-event dt.p-name,
     .gm-style-iw .h-event .p-location
