--- a/_themes/tm3/css/recordings.css
+++ b/_themes/tm3/css/recordings.css
@@ -1,4 +1,4 @@
-#content { padding-top: 48px; }
+#content { padding-top: 96px; }
 
 #current-recording-overlay,
 #next-recording-overlay
@@ -29,24 +29,66 @@
     margin-bottom: 20px;
 }
 
+#next-recording-overlay { opacity: 0; }
+
+#recordings-list { padding: 0; }
+
+#recordings-list .recording { margin-bottom: 90px; }
+
+.js.screen-size-0 body,
+.js.screen-size-1 body { overflow: hidden; }
+
 .js.screen-size-0 #site-wrapper,
 .js.screen-size-1 #site-wrapper
 {
     bottom: 0;
     left: 0;
-    position: fixed;
-    right: 0;
+    overflow: hidden;
+    position: absolute;
     top: 0;
+    width: 100%;
+
+    /* Prevent native touch events on Windows */
+    -ms-touch-action: none;
+
+    /* Prevent the callout on tap-hold and text selection */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    /* Prevent text resize on orientation change, useful for web-apps */
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    -ms-text-size-adjust: none;
+    -o-text-size-adjust: none;
+    text-size-adjust: none;
 }
 
-#site-wrapper { padding-top: 40px; }
-#next-recording-overlay { opacity: 0; }
-#recordings-list { padding: 0; }
-#recordings-list .recording { margin-bottom: 90px; }
-.js div.iScrollVerticalScrollbar.iScrollLoneScrollbar { right: 2px !important; width: 3px !important; }
-.js div.iScrollIndicator { border-color: rgba(255, 255, 255, 0.15) !important; }
-
-@media (min-width: 768px)
+.js.screen-size-0 .scroller,
+.js.screen-size-1 .scroller
 {
-    #site-wrapper { padding-top: 120px; }
+    position: absolute;
+
+    /* Prevent elements to be highlighted on tap */
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+
+    /* Put the scroller into the HW Compositing layer right from the start */
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    transform: translateZ(0);
+}
+
+.js div.iScrollVerticalScrollbar.iScrollLoneScrollbar
+{
+    right: 2px !important;
+    width: 3px !important;
+}
+
+.js div.iScrollIndicator
+{
+    border-color: rgba(255, 255, 255, 0.15) !important;
 }
