--- a/_themes/tm3/css/recordings.css
+++ b/_themes/tm3/css/recordings.css
@@ -43,10 +43,9 @@
 {
     bottom: 0;
     left: 0;
-    overflow: hidden;
     position: absolute;
+    right: 0;
     top: 0;
-    width: 100%;
 
     /* Prevent native touch events on Windows */
     -ms-touch-action: none;
@@ -74,7 +73,7 @@
     /* Prevent elements to be highlighted on tap */
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 
-    /* Put the scroller into the HW Compositing layer right from the start */
+     Put the scroller into the HW Compositing layer right from the start
     -webkit-transform: translateZ(0);
     -moz-transform: translateZ(0);
     -ms-transform: translateZ(0);
