Bug fixes for IE10

--- a/_themes/tm3/css/layout.css
+++ b/_themes/tm3/css/layout.css
@@ -12,6 +12,8 @@ footer
 {
     background-color: #111;
     color: #FFF;
+    position: relative;
+    z-index: 3;
 }
 
 footer [class*=col] { padding-bottom: 0; }
