--- a/_themes/tm3/css/performances.css
+++ b/_themes/tm3/css/performances.css
@@ -43,6 +43,14 @@
     padding: 8px 16px;
     width: 100%;
     -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
+    appearance: none;
+}
+
+.js #year-selector::-ms-expand
+{
+    display:none;
 }
 
 .js #year-selector-wrapper::before
