--- a/_themes/tm3/css/typography.css
+++ b/_themes/tm3/css/typography.css
@@ -105,8 +105,7 @@ body,
 .link:visited,
 .gm-style-iw .link,
 .gm-style-iw .link:link,
-.gm-style-iw .link:visited
-{ color: #03a9f4; }
+.gm-style-iw .link:visited { color: #03a9f4; }
 
 #logo a,
 #menu a,
