Fixed select box appearance in FF

--- a/_themes/tm3/css/performances.css
+++ b/_themes/tm3/css/performances.css
@@ -43,7 +43,7 @@
     padding: 8px 16px;
     width: 100%;
     -webkit-appearance: none;
-    -moz-appearance: none;
+    -moz-appearance: window;
     -o-appearance: none;
     appearance: none;
 }
