--- a/_themes/tm3/css/recordings.css
+++ b/_themes/tm3/css/recordings.css
@@ -91,3 +91,8 @@
 {
     border-color: rgba(255, 255, 255, 0.15) !important;
 }
+
+@media (min-width: 1024px)
+{
+    #site-wrapper { top: 60px; }
+}
