--- a/_themes/tm3/css/quotes.css
+++ b/_themes/tm3/css/quotes.css
@@ -4,20 +4,11 @@
     margin: 0;
 }
 
-.quote figcaption
-{
-    margin-top: 24px;
-}
-
 .quote cite
 {
     display: block;
     font-style: normal;
 }
-
-.hero .quote { opacity: 0; }
-
-.hero .quote:first-child { opacity: 1; }
 
 .hero .quotes
 {
@@ -37,6 +28,12 @@
     right: 0;
 }
 
+.hero .quote { opacity: 0; }
+
+.hero .quote:first-child { opacity: 1; }
+
+.quote figcaption { margin-top: 24px; }
+
 @media (min-width: 768px)
 {
     .quote
@@ -44,8 +41,6 @@
         font-size: 11px;
         padding: 24px;
     }
-
-    .hero .quote { padding: 0; }
 
     .quotes.left
     {
@@ -64,5 +59,5 @@
 
     .hero .quotes.right { left: auto; }
 
-    .hero .quote { font-size: 14px; }
+    .hero .quote { font-size: 14px; padding: 0; }
 }
