--- a/_themes/tm3/templates/contact.html
+++ b/_themes/tm3/templates/contact.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="hero">
+    <div class="hero scrim">
         {{ entries:listing conditions="slug:school" folder="contact" show_hidden="true" }}
         <div class="tile pad">
             <h2 class="display-1 pad-vertical">{{ title }}</h2>
@@ -12,7 +12,7 @@
 
 <div class="row">
     {{ entries:listing conditions="slug:summer" folder="contact" show_hidden="true" }}
-    <div class="hero" style="background-image: url({{ artwork }}); background-position: left center;">
+    <div class="hero scrim" style="background-image: url({{ artwork }}); background-position: left center;">
         <div class="tile pad right">
             <h2 class="display-1 pad-vertical">{{ title }}</h2>
 
