--- a/_themes/tm3/templates/premieres.html
+++ b/_themes/tm3/templates/premieres.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-1-2">
-        {{ theme:partial src="hero" use_context="true" }}
+        {{ theme:partial enable_scrim="true" src="hero" use_context="true" }}
     </div>
     <div class="col-1-2" style="background-color: {{ background_color }};">
         <main class="pad" id="content" role="main">
