Fixed form field color on error states.

--- a/_themes/tm3/css/forms.css
+++ b/_themes/tm3/css/forms.css
@@ -6,6 +6,7 @@ textarea
 {
     border: 1px solid #DBDBDB;
     border-radius: 0;
+    color: #202020;
     font-size: 13px;
     overflow: auto;
     resize: none;
