--- a/_themes/tm3/css/layout.css
+++ b/_themes/tm3/css/layout.css
@@ -10,7 +10,7 @@
 
 footer
 {
-    background-color: #090909;
+    background-color: #0B0B0B;
     color: #FFF;
     position: relative;
     z-index: 3;
