--- a/_themes/tm3/css/menu.css
+++ b/_themes/tm3/css/menu.css
@@ -4,9 +4,9 @@
     letter-spacing: 0.25rem;
     line-height: 28px;
     margin: 0;
-    padding-bottom: 24px;
-    padding-left: 24px;
-    padding-top: 24px;
+    padding-bottom: 12px;
+    padding-left: 12px;
+    padding-top: 12px;
     position: fixed;
     text-transform: uppercase;
     top: 0;
@@ -21,9 +21,9 @@
     opacity: 1;
     overflow: hidden;
     position: fixed;
-    right: 16px;
+    right: 4px;
     text-align: center;
-    top: 22px;
+    top: 10px;
     width: 48px;
     z-index: 7;
 }
@@ -42,7 +42,7 @@
     bottom: 0;
     overflow: auto;
     overflow-x: hidden;
-    padding-top: 16px;
+    padding-top: 4px;
     position: fixed;
     right: 0;
     top: 0;
@@ -72,5 +72,19 @@ body.checked #menu { width: 320px; }
 
 @media (min-width: 768px)
 {
-    #logo { font-size: 22px; }
+    #logo
+    {
+        font-size: 22px;
+        padding-bottom: 24px;
+        padding-left: 24px;
+        padding-top: 24px;
+    }
+
+    #menu-toggle
+    {
+        right: 16px;
+        top: 22px;
+    }
+
+    .js #menu { padding-top: 14px; }
 }
