--- a/_themes/tm3/partials/meta.html
+++ b/_themes/tm3/partials/meta.html
@@ -4,3 +4,4 @@
 <meta content="True" name="HandheldFriendly">
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui=1 user-scalable=0" name="viewport">
 <meta content="telephone=no" name="format-detection">
+<meta content="yPXEM71QWRmfqFMVaInFJVnGffmcVIvRwmSrG_Z0P04" name="google-site-verification" >
