--- a/_themes/tm3/partials/mailing-list-form.html
+++ b/_themes/tm3/partials/mailing-list-form.html
@@ -15,7 +15,7 @@
         {{ /if }}
 
         {{ if {raven:success} }}
-            <div class="text-center pad-half">
+            <div class="pad-half-vertical">
                 <h3 class="headline">Thank you.</h3>
             </div>
         {{ else }}
