Changed quote clearing to use 'odd'

--- a/_themes/tm3/css/quotes.css
+++ b/_themes/tm3/css/quotes.css
@@ -34,7 +34,7 @@
 
 .quote figcaption { margin-top: 24px; }
 
-.quotes .col-1-2:nth-child(even) { clear: left; }
+.quotes .col-1-2:nth-child(odd) { clear: left; }
 
 @media (min-width: 768px)
 {
