--- a/_themes/tm3/partials/hero.html
+++ b/_themes/tm3/partials/hero.html
@@ -1,24 +1,23 @@
 <div class="row">
     <div class="hero{{ if enable_scrim }} scrim{{ /if }}">
-        {{ if quotes }}
         <div class="quotes {{ quote_position }}">
-            {{ quotes sort_by="random" }}
-            {{ entries:listing conditions="url:{quote}" folder="quotes" limit="1" show_hidden="true" }}
-                {{ theme:partial src="quote"{{ if dark_quote }} dark_quote="true"{{ /if }} use_context="true" }}
-            {{ /entries:listing }}
-            {{ /quotes }}
-        </div>
-        {{ theme:js src="quotes" tag="true" }}
-        {{ /if }}
 
-        {{ if random_quotes }}
-        <div class="quotes {{ quote_position }}">
-        {{ entries:listing folder="quotes" limit="{ random_quote_total }" show_hidden="true" sort_by="random" }}
-        {{ theme:partial src="quote"{{ if dark_quote }} dark_quote="true"{{ /if }} use_context="true" }}
+        {{ if quotes }}
+        {{ quotes sort_by="random" }}
+        {{ entries:listing conditions="url:{quote}" folder="quotes" limit="1" show_hidden="true" }}
+            {{ theme:partial src="quote"{{ if dark_quote }} dark_quote="true"{{ /if }} use_context="true" }}
         {{ /entries:listing }}
-        </div>
-        {{ theme:js src="quotes" tag="true" }}
+        {{ /quotes }}
+
+        {{ else }}
+
+        {{ entries:listing folder="quotes" limit="{ random_quote_total }" show_hidden="true" sort_by="random" }}
+            {{ theme:partial src="quote"{{ if dark_quote }} dark_quote="true"{{ /if }} use_context="true" }}
+        {{ /entries:listing }}
         {{ /if }}
+        </div>
+
+        {{ theme:js src="quotes" tag="true" }}
     </div>
     <div class="hero-mask"></div>
 
