--- a/_themes/tm3/templates/news.html
+++ b/_themes/tm3/templates/news.html
@@ -1,4 +1,4 @@
-{{ theme:partial enable_banner="true" random_quotes="true" src="hero" short="true" use_context="true" }}
+{{ theme:partial enable_banner="true" src="hero" short="true" use_context="true" }}
 
 <main id="content" role="main" style="background-color: {{ background_color }};">
     <div class="center-layout" id="articles">
