--- a/_themes/tm3/css/events.css
+++ b/_themes/tm3/css/events.css
@@ -66,13 +66,13 @@
 {
     .map #performance-list
     {
-        bottom: 0;
-        left: 0;
+        bottom: 32px;
+        left: 16px;
         margin: 0;
         overflow: auto;
         position: absolute;
         right: 0;
-        top: 0;
+        top: 16px;
         width: 320px;
         z-index: 1;
     }
