--- a/_themes/tm3/partials/performance.html
+++ b/_themes/tm3/partials/performance.html
@@ -13,7 +13,7 @@
 
         <div class="float-right">
             <div class="calendar col-1-4 no-pad">
-                <time class="dt-start" datetime="{{ datestamp format="m-d-Y" }} {{ time }}">
+                <time class="dt-start" datetime="{{ datestamp format="Y-m-d h:i" }} {{ time }}">
                     <span class="month">{{ datestamp format="M" }}</span>
                     <span class="day">{{ datestamp format="j" }}</span>
                     <span class="year">{{ datestamp format="Y" }}</span>
