--- a/_themes/tm3/partials/quote.html
+++ b/_themes/tm3/partials/quote.html
@@ -1,5 +1,5 @@
 <figure class="quote">
-    <blockquote class="headline">{{ content|widont|smartypants }}</blockquote>
+    <blockquote class="headline">{{ content|widont|smartypants|entities }}</blockquote>
 
     <figcaption>
         <span class="body-2">{{ title|widont }}</span>
