--- a/_themes/tm3/partials/menu.html
+++ b/_themes/tm3/partials/menu.html
@@ -1,7 +1,7 @@
 <aside class="scrollable" id="menu">
     <ul class="list">
         {{ nav from="/" include_content="true" max_depth="1" }}
-        <li><a class="button block text-left" data-icon="{{ page_icon }}" href="{{ url }}">{{ title }}</a></li>
+        <li><a class="{{ if page_url == url }}active {{ /if }}button block text-left" data-icon="{{ page_icon }}" href="{{ url }}">{{ title }}</a></li>
         {{ /nav }}
         {{ entries:listing conditions="slug:prism-quartet" folder="social-links" show_hidden="true" }}
         <li><a class="button block text-left" data-icon="{{ page_icon }}" href="{{ social_url }}" target="_blank" title="Visit the {{ title }} page">{{ title }}</a></li>
