--- a/_themes/tm3/css/home.css
+++ b/_themes/tm3/css/home.css
@@ -1,8 +1,8 @@
-#live-recordings { background: #EDEDED; }
+#live-excerpts { background: #EDEDED; }
 
 @media (min-width: 768px)
 {
-    #live-recordings .col-1-2:first-child
+    #live-excerpts .col-1-2:first-child
     {
         bottom: 0;
         left: 0;
@@ -13,14 +13,14 @@
         width: 50%;
     }
 
-    #live-recordings .col-1-2:first-child img
+    #live-excerpts .col-1-2:first-child img
     {
         bottom: 0;
         left: 0;
         position: absolute;
     }
 
-    #live-recordings .col-1-2:last-child
+    #live-excerpts .col-1-2:last-child
     {
         float: right;
         width: 50%;
