--- a/_themes/tm3/templates/biography.html
+++ b/_themes/tm3/templates/biography.html
@@ -8,7 +8,7 @@
             <div class="body-1">{{ content|widont }}</div>
 
             <div class="pad-vertical">
-                {{ theme:partial src="biography-downloads" use_context }}
+                {{ theme:partial src="biography-downloads" use_context="true" }}
             </div>
         </div>
     </main>
