--- a/_themes/tm3/partials/biography-downloads.html
+++ b/_themes/tm3/partials/biography-downloads.html
@@ -3,8 +3,8 @@
     <tbody>
         {{ pdfs }}
         <tr>
-            <th class="body-1 secondary-text">{{ label }}</th>
-            <td class="body-1 primary-text text-right width-50">
+            <th class="secondary-text">{{ label }}</th>
+            <td class="primary-text text-right width-50">
                 <a class="button download" href="{{ download file="{pdf}" as="{pdf}" }}">Download</a>
             </td>
         </tr>
