Added title attributes to photo download links

--- a/_themes/tm3/templates/photos-info.html
+++ b/_themes/tm3/templates/photos-info.html
@@ -12,9 +12,9 @@
                         <img alt="" src="{{ transform src="{ photo_download }" quality="100" width="{ download_small_size }" }}" />
 
                         <div class="text-center pad-half-vertical">
-                            <a class="button download inline" href="/TRIGGER/download/download?file={{ transform src="{ photo_download }" quality="100" width="{ download_medium_size }" }}">Low</a>
+                            <a class="button download inline" href="/TRIGGER/download/download?file={{ transform src="{ photo_download }" quality="100" width="{ download_medium_size }" }}" title="Download a low resolution version of this photo">Low</a>
 
-                            <a class="button download inline" href="/TRIGGER/download/download?file={{ transform src="{ photo_download }" quality="100" width="{ download_large_size }" }}">High</a>
+                            <a class="button download inline" href="/TRIGGER/download/download?file={{ transform src="{ photo_download }" quality="100" width="{ download_large_size }" }}" title="Download a high resolution version of this photo">High</a>
                         </div>
                     </div>
                 {{ /downloads }}
